--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.4.2",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.4.2",
     "@types/pg-pool": "^2.0.3",
     "@types/uuid": "^9.0.2",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
     "pg-pool": "^3.6.1",
     "uuid": "^9.0.0"
